Center card and right stream

--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -4,6 +4,8 @@ $dark: false;
 /*Light*/
 
     $colorPrimary: 				#009688             !default;
+    $colorPrimary500: 				#009688             !default;
+    $colorPrimary700:           rgba(0,121,107,1)   !default;
     $colorPrimaryContrast: 		#fff                !default;
             
     $colorAccent:			    #ff5252             !default;
