--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,6 +12,8 @@
 @import "comments";
 @import "bootstrap-customization";
 @import "media.scss";
+@import "book-selector";
+@import "fab";
 
 * {
 /*	border-radius: 2px !important;*/
