--- a/styles/card.css
+++ b/styles/card.css
@@ -14,18 +14,19 @@
   position: relative;
   background: #fff;
   display: block;
-  transition: box-shadow .25 ease-in-out;
+  transition: all .25s ease-in-out !important;
+  transition: box-shadow .25s ease-in-out;
   box-shadow: 0 0px 2px rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
   transition: margin .25s ease-in-out;
   margin: 0;
 }
 
-/* line 45, D:/work/dat/conduit/sass/card.scss */
+/* line 46, D:/work/dat/conduit/sass/card.scss */
 .card-header {
   height: 1.25em;
 }
 
-/* line 49, D:/work/dat/conduit/sass/card.scss */
+/* line 50, D:/work/dat/conduit/sass/card.scss */
 .card .subject {
   color: #bdbdbd;
   position: absolute;
@@ -35,7 +36,7 @@
   font-size: .75em;
 }
 
-/* line 58, D:/work/dat/conduit/sass/card.scss */
+/* line 59, D:/work/dat/conduit/sass/card.scss */
 .card:hover {
   background: #f2f2f2;
   transition: box-shadow .25s ease-in-out;
@@ -44,12 +45,12 @@
   cursor: pointer;
 }
 
-/* line 66, D:/work/dat/conduit/sass/card.scss */
+/* line 67, D:/work/dat/conduit/sass/card.scss */
 .card:hover .card-btn {
   visibility: visible;
 }
 
-/* line 70, D:/work/dat/conduit/sass/card.scss */
+/* line 71, D:/work/dat/conduit/sass/card.scss */
 .card .title {
   overflow: hidden;
   white-space: nowrap;
@@ -58,7 +59,7 @@
   line-height: 1.5em;
 }
 
-/* line 79, D:/work/dat/conduit/sass/card.scss */
+/* line 80, D:/work/dat/conduit/sass/card.scss */
 .card .text {
   overflow: hidden;
   white-space: normal;
@@ -68,7 +69,7 @@
   line-height: 1em;
 }
 
-/* line 90, D:/work/dat/conduit/sass/card.scss */
+/* line 91, D:/work/dat/conduit/sass/card.scss */
 .card .tag {
   font-size: .75em;
   line-height: 0.938em;
@@ -79,17 +80,17 @@
   border: none;
 }
 
-/* line 101, D:/work/dat/conduit/sass/card.scss */
+/* line 102, D:/work/dat/conduit/sass/card.scss */
 .card #tag-wrapper {
   width: 70%;
   margin: 0.313em 0 0 0;
-  height: 0.938em;
+  height: 1.438em em;
   white-space: nowrap;
-  overflow: show;
+  overflow-x: hidden;
   float: left;
 }
 
-/* line 110, D:/work/dat/conduit/sass/card.scss */
+/* line 111, D:/work/dat/conduit/sass/card.scss */
 .card #tag-wrapper-action {
   width: 33%;
   float: left;
@@ -99,7 +100,7 @@
   background: inherit;
 }
 
-/* line 119, D:/work/dat/conduit/sass/card.scss */
+/* line 120, D:/work/dat/conduit/sass/card.scss */
 .card #tag-wrapper-action .action {
   background: none;
   border: none;
@@ -109,12 +110,22 @@
   color: #009688;
 }
 
-/* line 128, D:/work/dat/conduit/sass/card.scss */
+/* line 129, D:/work/dat/conduit/sass/card.scss */
 .card #icon {
   float: left;
 }
 
-/* line 132, D:/work/dat/conduit/sass/card.scss */
+/* line 133, D:/work/dat/conduit/sass/card.scss */
+.card #date {
+  width: 30%;
+  margin: 0.313em 0 0 0;
+  height: 1.438em em;
+  white-space: nowrap;
+  overflow: hidden;
+  float: right;
+}
+
+/* line 142, D:/work/dat/conduit/sass/card.scss */
 .card .card-btn {
   visibility: hidden;
   position: absolute;
@@ -126,7 +137,7 @@
   /* For IE8 and earlier */
 }
 
-/* line 143, D:/work/dat/conduit/sass/card.scss */
+/* line 153, D:/work/dat/conduit/sass/card.scss */
 .card .card-btn:hover {
   opacity: 1;
   filter: alpha(opacity=100);
@@ -134,7 +145,7 @@
   transition: opacity .2s ease-in-out;
 }
 
-/* line 149, D:/work/dat/conduit/sass/card.scss */
+/* line 159, D:/work/dat/conduit/sass/card.scss */
 .card.active {
   background: #d9d9d9;
   transition: box-shadow .25s ease-in-out;
@@ -145,52 +156,66 @@
   z-index: 99;
 }
 
-/* line 158, D:/work/dat/conduit/sass/card.scss */
+/* line 168, D:/work/dat/conduit/sass/card.scss */
 .card.active:hover {
   background: #cccccc;
   box-shadow: 0 0px 6px 0 rgba(0, 0, 0, 0.12), 0 6px 6px 0 rgba(0, 0, 0, 0.24);
   transition: margin .25s ease-in-out;
 }
 
-/* line 164, D:/work/dat/conduit/sass/card.scss */
+/* line 174, D:/work/dat/conduit/sass/card.scss */
 .card.active .tag {
   color: #212121;
 }
 
-/* line 169, D:/work/dat/conduit/sass/card.scss */
+/* line 179, D:/work/dat/conduit/sass/card.scss */
 .read .title {
   color: #bdbdbd;
 }
 
-/* line 172, D:/work/dat/conduit/sass/card.scss */
+/* line 182, D:/work/dat/conduit/sass/card.scss */
 .read .text {
   color: #bdbdbd;
 }
 
-/* line 175, D:/work/dat/conduit/sass/card.scss */
+/* line 185, D:/work/dat/conduit/sass/card.scss */
 .read .tag {
   background: transparent;
   color: #bdbdbd;
 }
 
-/* line 182, D:/work/dat/conduit/sass/card.scss */
+/* line 192, D:/work/dat/conduit/sass/card.scss */
 .active-read .title {
   color: #717171;
 }
 
-/* line 185, D:/work/dat/conduit/sass/card.scss */
+/* line 195, D:/work/dat/conduit/sass/card.scss */
 .active-read .text {
   color: #717171;
 }
 
-/* line 188, D:/work/dat/conduit/sass/card.scss */
+/* line 198, D:/work/dat/conduit/sass/card.scss */
 .active-read .tag {
   color: #717171;
 }
 
-/* line 191, D:/work/dat/conduit/sass/card.scss */
+/* line 201, D:/work/dat/conduit/sass/card.scss */
 .active-read .subject {
   color: #717171;
+}
+
+/* line 206, D:/work/dat/conduit/sass/card.scss */
+.card.ng-hide:not(.ng-hide-animate) {
+  /* These are just alternative ways of hiding an element */
+  display: block !important;
+  transition: all .25s ease-in-out !important;
+  height: 0px !important;
+  max-height: 0px !important;
+  min-height: 0px !important;
+  padding: 0px !important;
+  border: none;
+  /*position: absolute;
+  top: -9999px;*/
 }
 
 /*# sourceMappingURL=../styles/card.map */
