--- a/sass/stream.scss
+++ b/sass/stream.scss
@@ -105,7 +105,7 @@
 /*Book*/
     .book {
 		width: auto;
-		top: 55px;
+		top: 66px;
 		bottom: 0px;
 		left: -10px;
 		right: 0px;
@@ -116,8 +116,9 @@
     {
         position: absolute;
         top: 10px;
-        left: -10px;
+        left: -5px;
         right: 10px;
+		width: auto;
     }
 	
     #right .stream-action {
