--- a/sass/viewer.scss
+++ b/sass/viewer.scss
@@ -2,6 +2,8 @@
 
 @import "colors.scss";
 
+$lrpadding: 15px; /*does not apply to all elements*/
+
 .article-view {
 			
 	position: absolute;
@@ -12,12 +14,21 @@
 	max-height: inherit;
 	overflow-y: auto;
 	overflow-x: hidden;
-	padding: 0 15px 0 15px;
+	padding: 0;
 
 	border-radius: 2px;
 	/*border: 1px solid $colorGrey;*/
 	background: $colorCardBackground;
 	box-shadow: 0 0px 2px rgba(0,0,0,0.12), 0 2px 2px 0 rgba(0,0,0,0.24);
+}
+
+.article-view #subject {
+    color: $colorGrey;
+	font-size: 12px;
+	line-height: 15px;
+	margin-top: 20px;
+	width: 100%;
+	text-align: center;
 }
 
 .btn-edit  {
@@ -32,18 +43,18 @@
 }
 
 .article-view .text.edit-field {
-	padding: 0 1vw;
+	margin: 0 $lrpadding;
 	height: 50vh;
 }
 
 .article-view #title-wrapper {
 	position: relative;
-	padding: 0;
+	margin-top: 8px;
+	margin: 0 $lrpadding;
 }
 
 
 .article-view .title {
-	padding: 0;
 	font-size: 1.5em;
 	font-family: 'Montserrat', sans-serif;	
 }
@@ -54,8 +65,7 @@
 }
 
 .article-view #image-wrapper {
-	display: inline-block;
-	padding: 0;
+	position: relative;
 	width: 100%;
 	max-height: 50vh;
 	display: block;
@@ -65,10 +75,18 @@
 	clear: both;
 
 	#nav-right {
-		float: right;
+		position: absolute;
+		top: 50%;
+		right: 15px;
+		bottom: 50%;
+		z-index: 100;
 	}
 	#nav-left {
-		float: left;
+		position: absolute;
+		top: 50%;
+		left: 15px;
+		bottom: 50%;
+		z-index: 100;
 	}
 }
 		
@@ -80,18 +98,31 @@
         margin-right: -0.25em;
     }
 		
-.article-view #image-wrapper.nav-arrow{
-	display: inline-block;
-	vertical-align: middle;
-	max-width: 10%;
-	font-size: 5vw;
-	height: auto;
-	color: $colorFont;
-	z-index: 100;
+#image-wrapper .nav-arrow{
+		$nav-icon-size: .75em;
+		$nav-circle-size: 2.5em;
+
+		background-color: $colorPrimary;
+		
+		width: $nav-circle-size;
+		height: $nav-circle-size;
+		border-radius: $nav-circle-size / 2;
+		box-shadow: 0 0 2px 0 rgba(0,0,0,0.12), 0 2px 2px 0 rgba(0,0,0,0.24);
+		transition: box-shadow .25s ease-in-out;
+
+		font-size: $nav-icon-size;
+		color: #fff;
+
+		padding: (($nav-circle-size - $nav-icon-size) / 2) - .1em;
+		text-align: center;
+		justify-content: center;
+		vertical-align: middle;
 }
-	.article-view #image-wrapper .nav-arrow:hover{
+	#image-wrapper .nav-arrow:hover{
 		cursor: pointer;
-		color: darken($colorFont, 10%);	
+		background-color: $colorPrimary700;	
+		box-shadow: 0 0 4px 0 rgba(0,0,0,0.12), 0 4px 4px 0 rgba(0,0,0,0.24);
+		transition: box-shadow .25s ease-in-out;
 	}
 
 .article-view #image-wrapper .greyout {
@@ -112,12 +143,12 @@
 }
 		
 .article-view .text-wrapper {
-    display: inline-block;
-	width: 100%;
+    margin: 0 $lrpadding;
+    position: relative;
+    top: 30px;
 }
 
 .article-view .text {
-	padding: 30px 3em;
 	display: block;
 	font-size: 1.125em;
 	line-height: 1.125em;
