--- a/styles/style.css
+++ b/styles/style.css
@@ -316,7 +316,7 @@ body {
 /* line 106, D:/work/dat/conduit/sass/stream.scss */
 .book {
   width: auto;
-  top: 55px;
+  top: 66px;
   bottom: 0px;
   left: -10px;
   right: 0px;
@@ -327,11 +327,12 @@ body {
 #right .nya-bs-select {
   position: absolute;
   top: 10px;
-  left: -10px;
+  left: -5px;
   right: 10px;
+  width: auto;
 }
 
-/* line 123, D:/work/dat/conduit/sass/stream.scss */
+/* line 124, D:/work/dat/conduit/sass/stream.scss */
 #right .stream-action {
   left: -10px;
   right: -10px;
@@ -339,7 +340,7 @@ body {
 
 /*Light*/
 /*Dark*/
-/* line 3, D:/work/dat/conduit/sass/filter.scss */
+/* line 5, D:/work/dat/conduit/sass/filter.scss */
 .category-wrapper {
   display: inline-block;
   width: 100%;
@@ -347,7 +348,7 @@ body {
   clear: both;
 }
 
-/* line 10, D:/work/dat/conduit/sass/filter.scss */
+/* line 12, D:/work/dat/conduit/sass/filter.scss */
 .category-wrapper .dropdown {
   width: 45% !important;
   min-width: 200px !important;
@@ -356,7 +357,7 @@ body {
   float: left !important;
 }
 
-/* line 18, D:/work/dat/conduit/sass/filter.scss */
+/* line 20, D:/work/dat/conduit/sass/filter.scss */
 .accordion-wrapper {
   position: absolute;
   z-index: 100;
@@ -364,43 +365,61 @@ body {
   top: 0px;
   left: 10px;
   right: 10px;
+  box-shadow: 0 0px 8px 0 rgba(0, 0, 0, 0.12), 0 8px 8px 0 rgba(0, 0, 0, 0.24);
 }
 
-/* line 26, D:/work/dat/conduit/sass/filter.scss */
+/* line 30, D:/work/dat/conduit/sass/filter.scss */
 .accordion-wrapper .panel-group {
   margin-bottom: 0px;
 }
 
-/* line 30, D:/work/dat/conduit/sass/filter.scss */
+/* line 34, D:/work/dat/conduit/sass/filter.scss */
 .accordion-wrapper .panel {
   box-shadow: none;
-  box-shadow: 0 0px 8px 0 rgba(0, 0, 0, 0.12), 0 8px 8px 0 rgba(0, 0, 0, 0.24);
 }
 
-/* line 35, D:/work/dat/conduit/sass/filter.scss */
+/* line 38, D:/work/dat/conduit/sass/filter.scss */
 .accordion-wrapper .panel a {
   color: #fff;
 }
 
-/* line 39, D:/work/dat/conduit/sass/filter.scss */
+/* line 42, D:/work/dat/conduit/sass/filter.scss */
 .accordion-wrapper .panel-default {
   border: none !important;
   border-radius: 0 !important;
 }
 
-/* line 43, D:/work/dat/conduit/sass/filter.scss */
+/* line 46, D:/work/dat/conduit/sass/filter.scss */
 .accordion-wrapper .panel-heading {
   background: #757575 !important;
-  height: 12px !important;
+  height: 24px !important;
   padding: 0px !important;
   border-radius: 0 !important;
+  z-index: 99;
 }
 
-/* line 49, D:/work/dat/conduit/sass/filter.scss */
+/* line 53, D:/work/dat/conduit/sass/filter.scss */
+.accordion-wrapper .panel-open .panel-heading {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border-radius: 0px 0px 2px 2px;
+}
+
+/* line 60, D:/work/dat/conduit/sass/filter.scss */
 .accordion-wrapper .panel-title {
   color: #fff !important;
   text-align: center !important;
-  font-size: 10px !important;
+  font-size: 14px !important;
+  padding: 5px 0;
+}
+
+/* line 67, D:/work/dat/conduit/sass/filter.scss */
+.accordion-wrapper .panel-body {
+  max-height: 40vh;
+  overflow-y: scroll;
+  padding: 15px 15px 39px 15px;
 }
 
 /*Article Card*/
@@ -419,18 +438,19 @@ body {
   position: relative;
   background: #fff;
   display: block;
-  transition: box-shadow .25 ease-in-out;
+  transition: all .25s ease-in-out !important;
+  transition: box-shadow .25s ease-in-out;
   box-shadow: 0 0px 2px rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
   transition: margin .25s ease-in-out;
   margin: 0;
 }
 
-/* line 45, D:/work/dat/conduit/sass/card.scss */
+/* line 46, D:/work/dat/conduit/sass/card.scss */
 .card-header {
   height: 1.25em;
 }
 
-/* line 49, D:/work/dat/conduit/sass/card.scss */
+/* line 50, D:/work/dat/conduit/sass/card.scss */
 .card .subject {
   color: #bdbdbd;
   position: absolute;
@@ -440,7 +460,7 @@ body {
   font-size: .75em;
 }
 
-/* line 58, D:/work/dat/conduit/sass/card.scss */
+/* line 59, D:/work/dat/conduit/sass/card.scss */
 .card:hover {
   background: #f2f2f2;
   transition: box-shadow .25s ease-in-out;
@@ -449,12 +469,12 @@ body {
   cursor: pointer;
 }
 
-/* line 66, D:/work/dat/conduit/sass/card.scss */
+/* line 67, D:/work/dat/conduit/sass/card.scss */
 .card:hover .card-btn {
   visibility: visible;
 }
 
-/* line 70, D:/work/dat/conduit/sass/card.scss */
+/* line 71, D:/work/dat/conduit/sass/card.scss */
 .card .title {
   overflow: hidden;
   white-space: nowrap;
@@ -463,7 +483,7 @@ body {
   line-height: 1.5em;
 }
 
-/* line 79, D:/work/dat/conduit/sass/card.scss */
+/* line 80, D:/work/dat/conduit/sass/card.scss */
 .card .text {
   overflow: hidden;
   white-space: normal;
@@ -473,7 +493,7 @@ body {
   line-height: 1em;
 }
 
-/* line 90, D:/work/dat/conduit/sass/card.scss */
+/* line 91, D:/work/dat/conduit/sass/card.scss */
 .card .tag {
   font-size: .75em;
   line-height: 0.938em;
@@ -484,17 +504,17 @@ body {
   border: none;
 }
 
-/* line 101, D:/work/dat/conduit/sass/card.scss */
+/* line 102, D:/work/dat/conduit/sass/card.scss */
 .card #tag-wrapper {
   width: 70%;
   margin: 0.313em 0 0 0;
-  height: 0.938em;
+  height: 1.438em em;
   white-space: nowrap;
-  overflow: show;
+  overflow-x: hidden;
   float: left;
 }
 
-/* line 110, D:/work/dat/conduit/sass/card.scss */
+/* line 111, D:/work/dat/conduit/sass/card.scss */
 .card #tag-wrapper-action {
   width: 33%;
   float: left;
@@ -504,7 +524,7 @@ body {
   background: inherit;
 }
 
-/* line 119, D:/work/dat/conduit/sass/card.scss */
+/* line 120, D:/work/dat/conduit/sass/card.scss */
 .card #tag-wrapper-action .action {
   background: none;
   border: none;
@@ -514,12 +534,22 @@ body {
   color: #009688;
 }
 
-/* line 128, D:/work/dat/conduit/sass/card.scss */
+/* line 129, D:/work/dat/conduit/sass/card.scss */
 .card #icon {
   float: left;
 }
 
-/* line 132, D:/work/dat/conduit/sass/card.scss */
+/* line 133, D:/work/dat/conduit/sass/card.scss */
+.card #date {
+  width: 30%;
+  margin: 0.313em 0 0 0;
+  height: 1.438em em;
+  white-space: nowrap;
+  overflow: hidden;
+  float: right;
+}
+
+/* line 142, D:/work/dat/conduit/sass/card.scss */
 .card .card-btn {
   visibility: hidden;
   position: absolute;
@@ -531,7 +561,7 @@ body {
   /* For IE8 and earlier */
 }
 
-/* line 143, D:/work/dat/conduit/sass/card.scss */
+/* line 153, D:/work/dat/conduit/sass/card.scss */
 .card .card-btn:hover {
   opacity: 1;
   filter: alpha(opacity=100);
@@ -539,7 +569,7 @@ body {
   transition: opacity .2s ease-in-out;
 }
 
-/* line 149, D:/work/dat/conduit/sass/card.scss */
+/* line 159, D:/work/dat/conduit/sass/card.scss */
 .card.active {
   background: #d9d9d9;
   transition: box-shadow .25s ease-in-out;
@@ -550,58 +580,73 @@ body {
   z-index: 99;
 }
 
-/* line 158, D:/work/dat/conduit/sass/card.scss */
+/* line 168, D:/work/dat/conduit/sass/card.scss */
 .card.active:hover {
   background: #cccccc;
   box-shadow: 0 0px 6px 0 rgba(0, 0, 0, 0.12), 0 6px 6px 0 rgba(0, 0, 0, 0.24);
   transition: margin .25s ease-in-out;
 }
 
-/* line 164, D:/work/dat/conduit/sass/card.scss */
+/* line 174, D:/work/dat/conduit/sass/card.scss */
 .card.active .tag {
   color: #212121;
 }
 
-/* line 169, D:/work/dat/conduit/sass/card.scss */
+/* line 179, D:/work/dat/conduit/sass/card.scss */
 .read .title {
   color: #bdbdbd;
 }
 
-/* line 172, D:/work/dat/conduit/sass/card.scss */
+/* line 182, D:/work/dat/conduit/sass/card.scss */
 .read .text {
   color: #bdbdbd;
 }
 
-/* line 175, D:/work/dat/conduit/sass/card.scss */
+/* line 185, D:/work/dat/conduit/sass/card.scss */
 .read .tag {
   background: transparent;
   color: #bdbdbd;
 }
 
-/* line 182, D:/work/dat/conduit/sass/card.scss */
+/* line 192, D:/work/dat/conduit/sass/card.scss */
 .active-read .title {
   color: #717171;
 }
 
-/* line 185, D:/work/dat/conduit/sass/card.scss */
+/* line 195, D:/work/dat/conduit/sass/card.scss */
 .active-read .text {
   color: #717171;
 }
 
-/* line 188, D:/work/dat/conduit/sass/card.scss */
+/* line 198, D:/work/dat/conduit/sass/card.scss */
 .active-read .tag {
   color: #717171;
 }
 
-/* line 191, D:/work/dat/conduit/sass/card.scss */
+/* line 201, D:/work/dat/conduit/sass/card.scss */
 .active-read .subject {
   color: #717171;
+}
+
+/* line 206, D:/work/dat/conduit/sass/card.scss */
+.card.ng-hide:not(.ng-hide-animate) {
+  /* These are just alternative ways of hiding an element */
+  display: block !important;
+  transition: all .25s ease-in-out !important;
+  height: 0px !important;
+  max-height: 0px !important;
+  min-height: 0px !important;
+  padding: 0px !important;
+  border: none;
+  /*position: absolute;
+  top: -9999px;*/
 }
 
 /*Article View*/
 /*Light*/
 /*Dark*/
-/* line 5, D:/work/dat/conduit/sass/viewer.scss */
+/*does not apply to all elements*/
+/* line 7, D:/work/dat/conduit/sass/viewer.scss */
 .article-view {
   position: absolute;
   top: 10px;
@@ -611,14 +656,24 @@ body {
   max-height: inherit;
   overflow-y: auto;
   overflow-x: hidden;
-  padding: 0 15px 0 15px;
+  padding: 0;
   border-radius: 2px;
   /*border: 1px solid $colorGrey;*/
   background: #fff;
   box-shadow: 0 0px 2px rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
 }
 
-/* line 23, D:/work/dat/conduit/sass/viewer.scss */
+/* line 25, D:/work/dat/conduit/sass/viewer.scss */
+.article-view #subject {
+  color: #bdbdbd;
+  font-size: 12px;
+  line-height: 15px;
+  margin-top: 20px;
+  width: 100%;
+  text-align: center;
+}
+
+/* line 34, D:/work/dat/conduit/sass/viewer.scss */
 .btn-edit {
   visibility: visible;
   color: #212121;
@@ -627,40 +682,39 @@ body {
   clear: both;
 }
 
-/* line 30, D:/work/dat/conduit/sass/viewer.scss */
+/* line 41, D:/work/dat/conduit/sass/viewer.scss */
 .btn-edit:hover {
   background-color: #d1d1d1;
 }
 
-/* line 34, D:/work/dat/conduit/sass/viewer.scss */
+/* line 45, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .text.edit-field {
-  padding: 0 1vw;
+  margin: 0 15px;
   height: 50vh;
 }
 
-/* line 39, D:/work/dat/conduit/sass/viewer.scss */
+/* line 50, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #title-wrapper {
   position: relative;
-  padding: 0;
+  margin-top: 8px;
+  margin: 0 15px;
 }
 
-/* line 45, D:/work/dat/conduit/sass/viewer.scss */
+/* line 57, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .title {
-  padding: 0;
   font-size: 1.5em;
   font-family: 'Montserrat', sans-serif;
 }
 
-/* line 51, D:/work/dat/conduit/sass/viewer.scss */
+/* line 62, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #title-wrapper .edit-field {
   line-height: 1.813em;
   height: 6em;
 }
 
-/* line 56, D:/work/dat/conduit/sass/viewer.scss */
+/* line 67, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper {
-  display: inline-block;
-  padding: 0;
+  position: relative;
   width: 100%;
   max-height: 50vh;
   display: block;
@@ -670,17 +724,25 @@ body {
   clear: both;
 }
 
-/* line 67, D:/work/dat/conduit/sass/viewer.scss */
+/* line 77, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper #nav-right {
-  float: right;
+  position: absolute;
+  top: 50%;
+  right: 15px;
+  bottom: 50%;
+  z-index: 100;
 }
 
-/* line 70, D:/work/dat/conduit/sass/viewer.scss */
+/* line 84, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper #nav-left {
-  float: left;
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  bottom: 50%;
+  z-index: 100;
 }
 
-/* line 75, D:/work/dat/conduit/sass/viewer.scss */
+/* line 93, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper::before {
   content: '';
   display: inline-block;
@@ -689,29 +751,36 @@ body {
   margin-right: -0.25em;
 }
 
-/* line 83, D:/work/dat/conduit/sass/viewer.scss */
-.article-view #image-wrapper.nav-arrow {
-  display: inline-block;
+/* line 101, D:/work/dat/conduit/sass/viewer.scss */
+#image-wrapper .nav-arrow {
+  background-color: #009688;
+  width: 2.5em;
+  height: 2.5em;
+  border-radius: 1.25em;
+  box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
+  transition: box-shadow .25s ease-in-out;
+  font-size: 0.75em;
+  color: #fff;
+  padding: 0.775em;
+  text-align: center;
+  justify-content: center;
   vertical-align: middle;
-  max-width: 10%;
-  font-size: 5vw;
-  height: auto;
-  color: #212121;
-  z-index: 100;
 }
 
-/* line 92, D:/work/dat/conduit/sass/viewer.scss */
-.article-view #image-wrapper .nav-arrow:hover {
+/* line 121, D:/work/dat/conduit/sass/viewer.scss */
+#image-wrapper .nav-arrow:hover {
   cursor: pointer;
-  color: #080808;
+  background-color: #00796b;
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.12), 0 4px 4px 0 rgba(0, 0, 0, 0.24);
+  transition: box-shadow .25s ease-in-out;
 }
 
-/* line 97, D:/work/dat/conduit/sass/viewer.scss */
+/* line 128, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper .greyout {
   visibility: hidden;
 }
 
-/* line 101, D:/work/dat/conduit/sass/viewer.scss */
+/* line 132, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .article-image {
   display: inline-block;
   margin: auto;
@@ -719,22 +788,22 @@ body {
   text-align: center;
 }
 
-/* line 108, D:/work/dat/conduit/sass/viewer.scss */
+/* line 139, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .article-image .image {
   width: 100%;
   max-height: 50vh;
   vertical-align: middle;
 }
 
-/* line 114, D:/work/dat/conduit/sass/viewer.scss */
+/* line 145, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .text-wrapper {
-  display: inline-block;
-  width: 100%;
+  margin: 0 15px;
+  position: relative;
+  top: 30px;
 }
 
-/* line 119, D:/work/dat/conduit/sass/viewer.scss */
+/* line 151, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .text {
-  padding: 30px 3em;
   display: block;
   font-size: 1.125em;
   line-height: 1.125em;
@@ -742,19 +811,19 @@ body {
   white-space: pre-line;
 }
 
-/* line 128, D:/work/dat/conduit/sass/viewer.scss */
+/* line 159, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .edit-field {
   padding: 0 1vw;
   width: 50vw;
 }
 
-/* line 133, D:/work/dat/conduit/sass/viewer.scss */
+/* line 164, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .editable-buttons {
   float: right;
   margin: 5px 0 75px 0;
 }
 
-/* line 138, D:/work/dat/conduit/sass/viewer.scss */
+/* line 169, D:/work/dat/conduit/sass/viewer.scss */
 .toolbox {
   position: absolute;
   bottom: -10px;
@@ -763,17 +832,17 @@ body {
   height: 50px;
 }
 
-/* line 145, D:/work/dat/conduit/sass/viewer.scss */
+/* line 176, D:/work/dat/conduit/sass/viewer.scss */
 .toolbox .container-fluid {
   padding: 0;
 }
 
-/* line 148, D:/work/dat/conduit/sass/viewer.scss */
+/* line 179, D:/work/dat/conduit/sass/viewer.scss */
 .toolbox .container-fluid .navbar-info {
   padding: 0;
 }
 
-/* line 151, D:/work/dat/conduit/sass/viewer.scss */
+/* line 182, D:/work/dat/conduit/sass/viewer.scss */
 .toolbox .container-fluid .navbar-right {
   margin-right: 0;
 }
@@ -1319,39 +1388,103 @@ input[type="checkbox"]:focus {
   }
 }
 
-/* line 16, D:/work/dat/conduit/sass/style.scss */
+/*Light*/
+/*Dark*/
+/* line 4, D:/work/dat/conduit/sass/book-selector.scss */
+#right .btn.btn-default.dropdown-toggle {
+  background-color: #009688;
+  color: white;
+  height: 56px;
+  border: none;
+  border-radius: 2px 2px 0 0;
+  color: white;
+  font-size: 16px;
+  line-height: 19px;
+  box-shadow: 0 0px 8px 0 rgba(0, 0, 0, 0.12), 0 8px 8px 0 rgba(0, 0, 0, 0.24);
+  z-index: 100;
+}
+
+/* line 22, D:/work/dat/conduit/sass/book-selector.scss */
+#right .dropdown-menu.open {
+  position: relative;
+  top: -20px;
+  left: 28%;
+  height: auto;
+  max-height: 25vh;
+  transition: max-height .25s ease-in-out;
+  max-width: 70%;
+  background-color: #fff;
+  border: none;
+  border-radius: 2px;
+  box-shadow: 0 0px 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
+  z-index: 101;
+}
+
+/* line 37, D:/work/dat/conduit/sass/book-selector.scss */
+#right .nya-bs-select.btn-group .dropdown-menu {
+  width: 100% !important;
+  min-width: initial !important;
+}
+
+/*Light*/
+/*Dark*/
+/* line 5, D:/work/dat/conduit/sass/fab.scss */
+#fab {
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+  height: 55px;
+  width: 55px;
+  border-radius: 27.5px;
+  background-color: #ff5252;
+  color: #fff;
+  transition: box-shadow .25s ease-in-out;
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.12), 0 8px 8px 0 rgba(0, 0, 0, 0.24);
+  font-size: 18px;
+  text-align: center;
+  padding: 16px;
+}
+
+/* line 25, D:/work/dat/conduit/sass/fab.scss */
+#fab:hover {
+  transition: box-shadow .25s ease-in-out;
+  box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.12), 0 12px 12px 0 rgba(0, 0, 0, 0.24);
+  cursor: pointer;
+}
+
+/* line 18, D:/work/dat/conduit/sass/style.scss */
 * {
   /*	border-radius: 2px !important;*/
 }
 
-/* line 20, D:/work/dat/conduit/sass/style.scss */
+/* line 22, D:/work/dat/conduit/sass/style.scss */
 .title {
   color: #212121;
 }
 
-/* line 24, D:/work/dat/conduit/sass/style.scss */
+/* line 26, D:/work/dat/conduit/sass/style.scss */
 .text {
   color: #212121;
 }
 
-/* line 28, D:/work/dat/conduit/sass/style.scss */
+/* line 30, D:/work/dat/conduit/sass/style.scss */
 .tag {
   color: #bdbdbd;
   font-family: 'Montserrat', sans-serif;
 }
 
-/* line 33, D:/work/dat/conduit/sass/style.scss */
+/* line 35, D:/work/dat/conduit/sass/style.scss */
 #action {
   float: left;
   padding-top: .1em;
 }
 
-/* line 38, D:/work/dat/conduit/sass/style.scss */
+/* line 40, D:/work/dat/conduit/sass/style.scss */
 .pointer-on-hover:hover {
   cursor: pointer;
 }
 
-/* line 42, D:/work/dat/conduit/sass/style.scss */
+/* line 44, D:/work/dat/conduit/sass/style.scss */
 ::-webkit-scrollbar {
   width: 2px;
   /* remove scrollbar space */
@@ -1359,7 +1492,7 @@ input[type="checkbox"]:focus {
 }
 
 /* optional: show position indicator in accent color */
-/* line 47, D:/work/dat/conduit/sass/style.scss */
+/* line 49, D:/work/dat/conduit/sass/style.scss */
 ::-webkit-scrollbar-thumb {
   background: #ff5252;
 }
